Landing position reviews

--- a/app/assets/stylesheets/admin/blocks/panel.sass
+++ b/app/assets/stylesheets/admin/blocks/panel.sass
@@ -54,6 +54,10 @@
   &.is-dark
     background: $blue_light
 
+  &.is-stand_alone
+    margin-top: 0
+    border-radius: 5px
+
 p.panel-text
   margin: 25px 0 0 0
 
@@ -63,6 +67,5 @@ p.panel-text
 .panel-footer
   +acts_as_panel_body
   padding: 15px
-  background: #E9EBEC
-  border-color: #D2CCCC
+  background: $blue_light
   border-radius: 0 0 5px 5px
