--- a/app/views/public/landings/_reviews.html.slim
+++ b/app/views/public/landings/_reviews.html.slim
@@ -3,7 +3,7 @@
     .column.is-16
       .section-title
         .section-title_inner
-          | Что говорят об Xhose™ наши клиенты
+          = @landing.reviews_title
 
   .columns
     .column.is-10.offset.is-by_3
