Review's author profession

--- a/app/views/admin/landings/_reviews_edit.html.slim
+++ b/app/views/admin/landings/_reviews_edit.html.slim
@@ -10,6 +10,7 @@
             = review_form.input :author,
               label: 'Автор',
               hint: 'Оставьте это поле пустым, и этот отзыв будет удален при сабмите формы'
+            = review_form.input :author_profession, label: 'Профессия автора'
             = review_form.input :author_gender, as: :radio_buttons, label: 'Пол автора', collection: {'Парень' => true, 'Девушка' => false}
             = review_form.input :text, label: 'Текст отзыва'
 
@@ -33,6 +34,7 @@
               = review_form.input :author,
                 label: 'Автор',
                 hint: 'Оставьте это поле пустым, и этот отзыв будет удален при сабмите формы'
+              = review_form.input :author_profession, label: 'Профессия автора'
               = review_form.input :author_gender, as: :radio_buttons, label: 'Пол автора', collection: {'Парень' => true, 'Девушка' => false}
               = review_form.input :text, label: 'Текст отзыва'
 
