Implement images uploader

--- a/app/views/admin/landings/edit.html.slim
+++ b/app/views/admin/landings/edit.html.slim
@@ -13,14 +13,14 @@
   .panel
     = neo_form_for @landing do |f|
       .form
-        = render 'admin/landings/form/landing_setup', landing: @landing, f: f
-        = render 'admin/landings/form/main_info', landing: @landing, f: f
+        /= render 'admin/landings/form/landing_setup', landing: @landing, f: f
+        /= render 'admin/landings/form/main_info', landing: @landing, f: f
         = render 'admin/landings/form/images', landing: @landing, f: f
-        = render 'admin/landings/form/description', landing: @landing, f: f
-        = render 'admin/landings/form/advantages', landing: @landing, f: f
-        = render 'admin/landings/form/reviews', landing: @landing, f: f
-        = render 'admin/landings/form/reviews', landing: @landing, f: f
-        = render 'admin/landings/form/seo', landing: @landing, f: f
+        /= render 'admin/landings/form/description', landing: @landing, f: f
+        /= render 'admin/landings/form/advantages', landing: @landing, f: f
+        /= render 'admin/landings/form/reviews', landing: @landing, f: f
+        /= render 'admin/landings/form/reviews', landing: @landing, f: f
+        /= render 'admin/landings/form/seo', landing: @landing, f: f
 
         .panel-footer
           .fl_r
