--- a/app/views/admin/landings/form/_reviews.html.slim
+++ b/app/views/admin/landings/form/_reviews.html.slim
@@ -40,4 +40,4 @@
 
     div class=('hidden' if landing.reviews.any?) data-role='reviews-empty_message'
       p.panel-text
-        | Нет отзывов
+        | Нет отзывов.
