--- a/app/views/admin/landings/form/_images.html.slim
+++ b/app/views/admin/landings/form/_images.html.slim
@@ -1,6 +1,50 @@
-.panel_item
+- image_template = capture do
+  - dummy_landing = Landing.new
+  - dummy_landing.landing_images.build
+
+  = neo_fields_for dummy_landing do |f|
+    = f.association :landing_images do |image_form|
+      .panel
+        .panel-body.is-stand_alone
+          .panel_list.is-table
+            .panel_list-inner
+              .panel_list-photo
+                img src=''
+                .panel_list-items
+                  = list_item 'Уникальный ID' do
+                    = image_form.input :key, label: false
+                  = list_item 'Alt-текст' do
+                    = image_form.input :alt_text, label: false
+                  = list_item 'Для галереи?' do
+                    = image_form.input :for_gallery, label: false
+                  = list_item 'Удалить?' do
+                    = image_form.input :_destroy, as: :boolean, label: false
+                  = image_form.input :id, as: :hidden, label: false
+
+.panel_item data-view='app#images_list' data={landing_id: landing.id,
+                                              upload_image_path: upload_image_landing_path(landing),
+                                              image_template: {html: image_template}.to_json}
   .panel_item-header
     | Изображения
-  .panel_item-body
-    .form-fields
 
+  .panel_item-body.has-p15
+    .wrapper.has-mb15 data-role='images_list-uploader'
+
+    .panels data-role='images-container'
+      = f.simple_fields_for :landing_images do |image_form|
+        .panel
+          .panel-body.is-stand_alone
+            .panel_list.is-table
+              .panel_list-inner
+                .panel_list-photo
+                  img src=image_form.object.image.current_path
+                .panel_list-items
+                  = list_item 'Уникальный ID' do
+                    = image_form.input :key, label: false
+                  = list_item 'Alt-текст' do
+                    = image_form.input :alt_text, label: false
+                  = list_item 'Для галереи?' do
+                    = image_form.input :for_gallery, label: false
+                  = list_item 'Удалить?' do
+                    = image_form.input :_destroy, as: :boolean, label: false
+                  = image_form.input :id, as: :hidden, label: false
