--- a/app/views/admin/landings/form/_images.html.slim
+++ b/app/views/admin/landings/form/_images.html.slim
@@ -9,17 +9,17 @@
           .panel_list.is-table
             .panel_list-inner
               .panel_list-photo
-                img src=''
-                .panel_list-items
-                  = list_item 'Уникальный ID' do
-                    = image_form.input :key, label: false
-                  = list_item 'Alt-текст' do
-                    = image_form.input :alt_text, label: false
-                  = list_item 'Для галереи?' do
-                    = image_form.input :for_gallery, label: false
-                  = list_item 'Удалить?' do
-                    = image_form.input :_destroy, as: :boolean, label: false
-                  = image_form.input :id, as: :hidden, label: false
+                img src='' data-role='images_list-image_tag'
+              .panel_list-items
+                = list_item 'Уникальный ID' do
+                  = image_form.input :key, label: false
+                = list_item 'Alt-текст' do
+                  = image_form.input :alt_text, label: false
+                = list_item 'Для галереи?' do
+                  = image_form.input :for_gallery, label: false
+                = list_item 'Удалить?' do
+                  = image_form.input :_destroy, as: :boolean, label: false
+                = image_form.input :id, as: :hidden, label: false, input_html: {data: {role: 'images_list-image_id'}}
 
 .panel_item data-view='app#images_list' data={landing_id: landing.id,
                                               upload_image_path: upload_image_landing_path(landing),
@@ -30,21 +30,6 @@
   .panel_item-body.has-p15
     .wrapper.has-mb15 data-role='images_list-uploader'
 
-    .panels data-role='images-container'
+    .panels data-role='images_list-container'
       = f.simple_fields_for :landing_images do |image_form|
-        .panel
-          .panel-body.is-stand_alone
-            .panel_list.is-table
-              .panel_list-inner
-                .panel_list-photo
-                  img src=image_form.object.image.current_path
-                .panel_list-items
-                  = list_item 'Уникальный ID' do
-                    = image_form.input :key, label: false
-                  = list_item 'Alt-текст' do
-                    = image_form.input :alt_text, label: false
-                  = list_item 'Для галереи?' do
-                    = image_form.input :for_gallery, label: false
-                  = list_item 'Удалить?' do
-                    = image_form.input :_destroy, as: :boolean, label: false
-                  = image_form.input :id, as: :hidden, label: false
+        = render 'admin/landings/form/image', image_form: image_form
