Move landing public button to decorator

--- a/app/views/admin/landings/edit.html.slim
+++ b/app/views/admin/landings/edit.html.slim
@@ -7,7 +7,7 @@
     | Редактирование лендинга
 
   .fl_r
-    = link_to 'Показать черновик &rarr;'.html_safe, @landing.public_path, class: 'small_button', target: '_blank'
+    = @landing.public_button
 
 .page-body
   .panel
