Implement markup for sorting

--- a/app/assets/stylesheets/admin/blocks/panel_list.sass
+++ b/app/assets/stylesheets/admin/blocks/panel_list.sass
@@ -38,26 +38,67 @@
   table-layout: fixed
   width: 100%
 
-  .panel_list-inner
-    display: table-row
+.panel_list-inner
+  display: table-row
 
-  .panel_list-photo,
-  .panel_list-items
-    display: table-cell
+.panel_list-photo,
+.panel_list-items
+  display: table-cell
+  vertical-align: top
+
+.panel_list-photo
+  position: static
+  width: 175px
+  height: 175px
+  padding: 15px
+  box-sizing: border-box
+  border-right: 1px solid $blue_medium
+
+  img
+    position: relative
+    width: 145px
+    height: 145px
     vertical-align: top
-
-  .panel_list-photo
-    position: static
-    width: 175px
-    height: 175px
-    padding: 15px
+    border-radius: 5px
     box-sizing: border-box
-    border-right: 1px solid $blue_medium
 
-    img
-      width: 145px
-      height: 145px
-      vertical-align: top
+  &.has-reorder_icon
+    position: relative
+
+    &:hover
+      cursor: pointer
+
+    &:before
+      content: ''
+      position: absolute
+      top: 15px
+      bottom: 15px
+      left: 15px
+      right: 15px
+      background: rgba(#000, .5)
       border-radius: 5px
-      box-sizing: border-box
+      z-index: 2
+      opacity: 0
+      transition: .2s opacity
+
+      .panel_list:hover &
+        opacity: 1
+
+    .fa-arrows-v
+      position: absolute
+      top: 50%
+      left: 50%
+      margin-top: -15px
+      margin-left: -10px
+      width: 20px
+      height: 30px
+      font-size: 26px
+      line-height: 30px
+      text-align: center
+      color: #fff
+      z-index: 3
+      opacity: 0
+
+      .panel_list:hover &
+        opacity: 1
 
