--- a/app/views/admin/landings/form/_image.html.slim
+++ b/app/views/admin/landings/form/_image.html.slim
@@ -2,8 +2,9 @@
   .panel-body.is-stand_alone
     .panel_list.is-table
       .panel_list-inner
-        .panel_list-photo
+        .panel_list-photo.has-reorder_icon
           img src=image_form.object.image.thumb.url data-role='images_list-image_tag'
+          = fa_icon 'arrows-v'
         .panel_list-items
           = list_item 'Уникальный ID' do
             = image_form.input :key, label: false
