JS for images sorting

--- a/app/assets/stylesheets/admin/blocks/panel.sass
+++ b/app/assets/stylesheets/admin/blocks/panel.sass
@@ -24,10 +24,10 @@
     text-align: left
 
 .panels .panel
-  margin-top: 15px
+  margin-bottom: 15px
 
-  &:first-child
-    margin-top: 0
+  &:last-child
+    margin-bottom: 0
 
 .panel-header
   +acts_as_panel_header
