--- a/app/views/admin/landings/form/_images.html.slim
+++ b/app/views/admin/landings/form/_images.html.slim
@@ -4,11 +4,11 @@
 
   = neo_fields_for dummy_landing do |f|
     = f.association :landing_images do |image_form|
-      .panel
+      .panel data-role='images_list-image'
         .panel-body.is-stand_alone
           .panel_list.is-table
             .panel_list-inner
-              .panel_list-photo.has-reorder_icon
+              .panel_list-photo.has-reorder_icon data-role='images_list-sorting_handle'
                 img src='' data-role='images_list-image_tag'
                 = fa_icon 'arrows-v'
               .panel_list-items
@@ -32,6 +32,22 @@
   .panel_item-body.has-p15
     .wrapper.has-mb15 data-role='images_list-uploader'
 
-    .panels data-role='images_list-container'
+    .panels.is-images_list data-role='images_list-container'
       = f.simple_fields_for :landing_images do |image_form|
-        = render 'admin/landings/form/image', image_form: image_form
+        .panel data-role='images_list-image' data={id: image_form.object.id}
+          .panel-body.is-stand_alone
+            .panel_list.is-table
+              .panel_list-inner
+                .panel_list-photo.has-reorder_icon data-role='images_list-sorting_handle'
+                  img src=image_form.object.image.thumb.url data-role='images_list-image_tag'
+                  = fa_icon 'arrows-v'
+                .panel_list-items
+                  = list_item 'Уникальный ID' do
+                    = image_form.input :key, label: false
+                  = list_item 'Alt-текст' do
+                    = image_form.input :alt_text, label: false
+                  = list_item 'Для галереи?' do
+                    = image_form.input :for_gallery, label: false
+                  = list_item 'Удалить?' do
+                    = image_form.input :_destroy, as: :boolean, label: false
+                  = image_form.input :id, as: :hidden, label: false, input_html: {data: {role: 'images_list-image_id'}}
