Improve images resizing

--- a/app/views/admin/landings/form/_images.html.slim
+++ b/app/views/admin/landings/form/_images.html.slim
@@ -30,7 +30,7 @@
     | Изображения
 
   .panel_item-body.has-p15
-    .wrapper.has-mb15 data-role='images_list-uploader'
+    div data-role='images_list-uploader'
 
     .panels.is-images_list data-role='images_list-container'
       = f.simple_fields_for :landing_images do |image_form|
