--- a/app/views/public/landings/_photos_slider.html.slim
+++ b/app/views/public/landings/_photos_slider.html.slim
@@ -1,31 +1,19 @@
 - modifier ||= nil
+- photos = @landing.landing_images.for_gallery
 
-.photos_slider class=("for-#{modifier}" if modifier) data-view='app#photos_slider'
-  .photos_slider-inner
-    .photos_slider-arrow_left.js-show_prev_photo
-      = fa_icon 'chevron-left'
-    .photos_slider-photo_wrap
-      .photos_slider-photo_inner
-        .photos_slider-photo.js-main_photo style="background-image: url(#{image_path('public/test_photo.jpg')});"
-    .photos_slider-arrow_right.js-show_next_photo
-      = fa_icon 'chevron-right'
-    .photos_slider-previews
-      .photos_slider-previews_inner.clearfix.js-photos_previews_container
-        .photos_slider-previews_item.js-photo_preview
-          .photos_slider-previews_item_inner
-            img src=image_path('public/test_photo.jpg')
-        .photos_slider-previews_item.js-photo_preview
-          .photos_slider-previews_item_inner
-            img src=image_path('public/test_photo2.jpg')
-        .photos_slider-previews_item.js-photo_preview
-          .photos_slider-previews_item_inner
-            img src=image_path('public/test_photo3.jpg')
-        .photos_slider-previews_item.js-photo_preview
-          .photos_slider-previews_item_inner
-            img src=image_path('public/test_photo4.jpg')
-        .photos_slider-previews_item.js-photo_preview
-          .photos_slider-previews_item_inner
-            img src=image_path('public/test_photo2.jpg')
-        .photos_slider-previews_item.js-photo_preview
-          .photos_slider-previews_item_inner
-            img src=image_path('public/test_photo3.jpg')
+- if photos.any?
+  .photos_slider class=("for-#{modifier}" if modifier) data-view='app#photos_slider'
+    .photos_slider-inner
+      .photos_slider-arrow_left.js-show_prev_photo
+        = fa_icon 'chevron-left'
+      .photos_slider-photo_wrap
+        .photos_slider-photo_inner
+          .photos_slider-photo.js-main_photo style="background-image: url(#{photos.first.image.gallery.url});"
+      .photos_slider-arrow_right.js-show_next_photo
+        = fa_icon 'chevron-right'
+      .photos_slider-previews
+        .photos_slider-previews_inner.clearfix.js-photos_previews_container
+          - photos.each do |photo|
+            .photos_slider-previews_item.js-photo_preview
+              .photos_slider-previews_item_inner
+                img src=photo.image.gallery.url
