--- a/app/assets/stylesheets/admin/blocks/panel.sass
+++ b/app/assets/stylesheets/admin/blocks/panel.sass
@@ -23,11 +23,18 @@
     width: 400px
     text-align: left
 
-.panels .panel
-  margin-bottom: 15px
+.panels
+  .panel
+    margin-bottom: 15px
 
-  &:last-child
-    margin-bottom: 0
+    &:last-child
+      margin-bottom: 0
+
+  &.is-images_list
+    margin-top: 15px
+
+    &:empty
+      margin-top: 0
 
 .panel-header
   +acts_as_panel_header
