--- a/app/assets/stylesheets/public/blocks/photos_slider.sass
+++ b/app/assets/stylesheets/public/blocks/photos_slider.sass
@@ -91,7 +91,9 @@
 .photos_slider-previews_item_inner
   background: #fff
   border-radius: 3px
+  height: 69px
   line-height: 69px
+  overflow: hidden
 
 .layout.lt-big_screen .photos_slider,
 .photos_slider.for-footer
@@ -113,6 +115,7 @@
     height: 60px
 
   .photos_slider-previews_item_inner
+    height: 54px
     line-height: 54px
 
 .layout.lt-big_screen .photos_slider
