--- a/app/views/public/landings/_photos_slider.html.slim
+++ b/app/views/public/landings/_photos_slider.html.slim
@@ -16,4 +16,4 @@
           - photos.each do |photo|
             .photos_slider-previews_item.js-photo_preview
               .photos_slider-previews_item_inner
-                img src=photo.image.gallery.url
+                img src=photo.image.gallery.url alt=photo.alt_text
