--- a/app/views/admin/landings/_landing.html.slim
+++ b/app/views/admin/landings/_landing.html.slim
@@ -5,6 +5,7 @@
         = landing.position.title
         span.chevron.is-right
     .fl_r
+      = landing.edit_button
       = landing.remove_button
 
   .panel_item-body
