--- a/app/views/admin/positions/_landing_details.html.slim
+++ b/app/views/admin/positions/_landing_details.html.slim
@@ -4,7 +4,7 @@
       span
         | Лендинг
       .fl_r
-        = link_to fa_icon('pencil'), edit_landing_path(landing), class: 'small_button is-icon'
+        = landing.edit_button
         = landing.public_button
     .panel_item-body
       .panel_list
