Add footer order form title editing

--- a/app/views/public/landings/_order.html.slim
+++ b/app/views/public/landings/_order.html.slim
@@ -3,7 +3,7 @@
     .column.is-16
       .section-title
         .section-title_inner
-          | Успейте заказать уникальный водяной шланг Xhose™ длиной 15 метров!
+          = @landing.footer_title
 
       .section-description
         | Только <b>до 27.11.2014</b> со <b>скидкой 40%</b>!
