--- a/app/views/admin/landings/edit.html.slim
+++ b/app/views/admin/landings/edit.html.slim
@@ -19,6 +19,7 @@
         = render 'admin/landings/form/description', landing: @landing, f: f
         = render 'admin/landings/form/advantages', landing: @landing, f: f
         = render 'admin/landings/form/reviews', landing: @landing, f: f
+        = render 'admin/landings/form/footer_order', landing: @landing, f: f
         = render 'admin/landings/form/seo', landing: @landing, f: f
 
         .panel-footer
