Allow to add images to text by unique ID

--- a/app/views/admin/landings/form/_images.html.slim
+++ b/app/views/admin/landings/form/_images.html.slim
@@ -13,7 +13,8 @@
                 = fa_icon 'arrows-v'
               .panel_list-items
                 = list_item 'Уникальный ID' do
-                  = image_form.object.id
+                  span data-role='images_list-image_uniq_id'
+                    = image_form.object.id
                 = list_item 'Alt-текст' do
                   = image_form.input :alt_text, label: false
                 = list_item 'Для галереи?' do
@@ -43,7 +44,8 @@
                   = fa_icon 'arrows-v'
                 .panel_list-items
                   = list_item 'Уникальный ID' do
-                    = image_form.object.id
+                    span data-role='images_list-image_uniq_id'
+                      = image_form.object.id
                   = list_item 'Alt-текст' do
                     = image_form.input :alt_text, label: false
                   = list_item 'Для галереи?' do
