Allow to add inline images to description text and advantages text

--- a/app/views/public/landings/_description.html.slim
+++ b/app/views/public/landings/_description.html.slim
@@ -7,7 +7,7 @@
 
   .columns
     .column.is-10.offset.is-by_3
-      = @landing.description_text
+      = @landing.description_text.html_safe
 
 .section.is-dark_gradient
   .columns
