H1-H3 tags for landing

--- a/app/assets/stylesheets/public/blocks/why_to_buy.sass
+++ b/app/assets/stylesheets/public/blocks/why_to_buy.sass
@@ -28,6 +28,9 @@
   margin: 38px 80px 38px 30px
   text-align: center
 
+  h3
+    display: inline
+
 .why_to_buy-click_me
   display: inline
   border-bottom: 1px dashed $transparent_100
