--- a/app/views/public/landings/_shipping.html.slim
+++ b/app/views/public/landings/_shipping.html.slim
@@ -2,7 +2,7 @@
   .columns
     .column.is-16
       .section-title
-        .section-title_inner
+        h2.section-title_inner
           | Как мы работаем и доставляем товары?
 
   .columns
