--- a/app/assets/stylesheets/public/layout.sass
+++ b/app/assets/stylesheets/public/layout.sass
@@ -14,3 +14,9 @@ body
 
 a
   text-decoration: none
+
+h1, h2, h3, h4, h5, h6
+  margin: 0
+  padding: 0
+  font-size: inherit
+  font-weight: normal
