--- a/app/views/public/landings/_description.html.slim
+++ b/app/views/public/landings/_description.html.slim
@@ -2,7 +2,7 @@
   .columns
     .column.is-16
       .section-title
-        .section-title_inner
+        h2.section-title_inner
           = @landing.description_title
 
   .columns
@@ -13,7 +13,7 @@
   .columns
     .column.is-16
       .section-title
-        .section-title_inner
+        h2.section-title_inner
           = @landing.advantages_title
 
   - if @landing.advantages_text
