--- a/app/views/public/landings/_reviews.html.slim
+++ b/app/views/public/landings/_reviews.html.slim
@@ -2,7 +2,7 @@
   .columns
     .column.is-16
       .section-title
-        .section-title_inner
+        h2.section-title_inner
           = @landing.reviews_title
 
   .columns
