Title and description for landing pages

--- a/app/assets/stylesheets/admin/form/_common.sass
+++ b/app/assets/stylesheets/admin/form/_common.sass
@@ -36,6 +36,7 @@
   .hint
     display: block
     margin: 5px 10px 0
-    font-size: 12px
+    font-size: 11px
     line-height: 15px
+    color: $text_color_light
 
