--- a/app/views/admin/landings/form/_advantages.html.slim
+++ b/app/views/admin/landings/form/_advantages.html.slim
@@ -7,4 +7,4 @@
       = f.input :advantages_text,
         label: 'Текст с преимуществами и характеристиками товара',
         input_html: {data: {view: 'app#editable_html'}},
-        hint: 'Допустимо использование HTML-разметки'
+        hint: 'Допустимо использование HTML-разметки.'
