--- a/app/views/admin/landings/form/_description.html.slim
+++ b/app/views/admin/landings/form/_description.html.slim
@@ -7,4 +7,4 @@
       = f.input :description_text,
         label: 'Текст с описанием товара',
         input_html: {data: {view: 'app#editable_html'}},
-        hint: 'Вы можете поместить видео внутри этого текста с помощью плейсхолдера %VIDEO%'
+        hint: 'Вы можете поместить видео внутри этого текста с помощью плейсхолдера %VIDEO%.'
