--- a/app/views/admin/landings/form/_landing_setup.html.slim
+++ b/app/views/admin/landings/form/_landing_setup.html.slim
@@ -6,4 +6,4 @@
       = f.association :category, label: 'Категория', prompt: 'Выберите категорию лендинга'
       = f.input :video_id,
         label: 'ID видео на ютубе',
-        hint: 'Пример: nyM52jsO4vo'
+        hint: 'Пример: nyM52jsO4vo.'
