--- a/app/views/admin/landings/form/_main_info.html.slim
+++ b/app/views/admin/landings/form/_main_info.html.slim
@@ -5,11 +5,11 @@
     .form-fields
       = f.input :title,
         label: 'Заголовок товара',
-        hint: 'Допустимо использование HTML-разметки'
+        hint: 'Заголовок в <h1> теге. Важно для SEO (но меньше, чем HTML заголовок страницы), рекомендуется включить сюда ключевые слова. Допустимо использование HTML-разметки.'
       = f.input :short_description,
         label: 'Краткое описание',
         input_html: {data: {view: 'app#editable_html'}},
-        hint: 'Допустимо использование HTML-разметки'
+        hint: 'Допустимо использование HTML-разметки.'
       = f.input :why_question,
         label: 'Вопрос "Почему?"',
-        hint: 'Пример: "Почему этот товар — незаменимая вещь в хозяйстве?"'
+        hint: 'Пример: "Почему этот товар — незаменимая вещь в хозяйстве?".'
