--- a/app/views/admin/landings/form/_seo.html.slim
+++ b/app/views/admin/landings/form/_seo.html.slim
@@ -3,5 +3,10 @@
     | SEO
   .panel_item-body
     .form-fields
+      = f.input :html_title,
+        label: 'HTML Title',
+        hint: 'Это заголовок страницы (используется в теге <title> страницы), так же он будет отображаться в результатах поиска поисковой системы. Для улучшения показателей SEO, должен включать нужные ключевые слова. Важно: для хороших SEO результатов значения <h1> и <title> не должны быть идентичными.'
+      = f.input :meta_description, label: 'META Description',
+        hint: 'Это описание страницы, которое будет отображаться под тайтлом страницы в результатах поиска поисковой системы. Должно ЗАСТАВЛЯТЬ пользователей кликнуть по ссылке, ДОЛЖНО БЫТЬ МЕНЬШЕ 160-ти знаков.'
       = f.input :slug, as: :slug, label: 'URL slug'
 
