--- a/app/views/layouts/public_landing.html.slim
+++ b/app/views/layouts/public_landing.html.slim
@@ -1,10 +1,11 @@
 doctype html
 html.layout
   head
+    title= @landing.html_title
+    meta name='description' content=@landing.meta_description
+
     meta charset='utf-8'
     meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'
-    title
-      | Coffee Dolphins Landing
 
     = stylesheet_link_tag 'public/color_schemes/blue'
     = javascript_include_tag 'public/application'
