--- a/app/views/public/landings/_guarantees.html.slim
+++ b/app/views/public/landings/_guarantees.html.slim
@@ -9,7 +9,7 @@
     .columns.guarantee
       .column.is-3.offset.is-by_3
         .guarantee-image
-          img src=image_path('public/icons/blue/guarantee.png')
+          img src=image_path("public/icons/#{@landing.color_scheme}/guarantee.png")
       .column.is-7
         .guarantee-title
           .g-dashed
@@ -20,7 +20,7 @@
     .columns.guarantee
       .column.is-3.offset.is-by_3
         .guarantee-image
-          img src=image_path('public/icons/blue/ship_everywhere.png')
+          img src=image_path("public/icons/#{@landing.color_scheme}/ship_everywhere.png")
       .column.is-7
         .guarantee-title
           .g-dashed
@@ -31,7 +31,7 @@
     .columns.guarantee
       .column.is-3.offset.is-by_3
         .guarantee-image
-          img src=image_path('public/icons/blue/discount.png')
+          img src=image_path("public/icons/#{@landing.color_scheme}/discount.png")
       .column.is-7
         .guarantee-title
           | Низкие цены
