--- a/app/views/public/landings/_shipping.html.slim
+++ b/app/views/public/landings/_shipping.html.slim
@@ -9,7 +9,7 @@
     .column.is-4
       .list_item
         .list_item-image
-          img src=image_path('public/icons/blue/order.png')
+          img src=image_path("public/icons/#{@landing.color_scheme}/order.png")
         .list_item-title
           span.list_item-number>
             | 1
@@ -18,7 +18,7 @@
     .column.is-4
       .list_item
         .list_item-image
-          img src=image_path('public/icons/blue/phone_call.png')
+          img src=image_path("public/icons/#{@landing.color_scheme}/phone_call.png")
         .list_item-title
           span.list_item-number>
             | 2
@@ -27,7 +27,7 @@
     .column.is-4
       .list_item
         .list_item-image
-          img src=image_path('public/icons/blue/shipping.png')
+          img src=image_path("public/icons/#{@landing.color_scheme}/shipping.png")
         .list_item-title
           span.list_item-number>
             | 3
@@ -36,7 +36,7 @@
     .column.is-4
       .list_item
         .list_item-image
-          img src=image_path('public/icons/blue/good_delivered.png')
+          img src=image_path("public/icons/#{@landing.color_scheme}/good_delivered.png")
         .list_item-title
           span.list_item-number>
             | 4
