--- a/app/views/layouts/public_landing.html.slim
+++ b/app/views/layouts/public_landing.html.slim
@@ -7,7 +7,7 @@ html.layout
     meta charset='utf-8'
     meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'
 
-    = stylesheet_link_tag 'public/color_schemes/blue'
+    = stylesheet_link_tag "public/color_schemes/#{@landing.color_scheme}"
     = javascript_include_tag 'public/application'
 
     javascript:
