Fix images border radius

--- a/app/assets/stylesheets/public/blocks/photos_slider.sass
+++ b/app/assets/stylesheets/public/blocks/photos_slider.sass
@@ -35,6 +35,7 @@
   background-position: center
   background-size: 100%
   background-repeat: no-repeat
+  border-radius: 2px
 
 .photos_slider-arrow_left,
 .photos_slider-arrow_right
