--- a/app/assets/stylesheets/public/imports.sass
+++ b/app/assets/stylesheets/public/imports.sass
@@ -11,6 +11,8 @@ $dark_800: darken($base, 12%)
 $dark_900: darken($base, 16%)
 
 $bd: #c2c2c2
+$text_light: #777
+$red: #D20A2F
 
 =full_width_bg($bg_color)
   position: relative
