Implement orange button

--- a/app/assets/stylesheets/public/blocks/sub_header.sass
+++ b/app/assets/stylesheets/public/blocks/sub_header.sass
@@ -96,4 +96,15 @@
 
 .sub_header-button
   float: left
+  margin: 2px 0
+  height: 36px
+  padding: 0 15px
+  font-size: 13px
+  line-height: 34px
+  +orange_button
+
+  b
+    margin: 0 1px
+    font-size: 15px
+    vertical-align: -1px
 
