--- a/app/views/public/landings/_header.html.slim
+++ b/app/views/public/landings/_header.html.slim
@@ -28,7 +28,7 @@
 
 .sub_header.clearfix
   .columns
-    .column.is-12.offset.is-by_2
+    .column.is-16
       .sub_header-inner
         .sub_header-title
           = @landing.title.html_safe
@@ -57,5 +57,5 @@
         .sub_header-arrow
           = fa_icon 'chevron-right'
         .sub_header-button
-          | Заказать со скидкой 40%
+          | Заказать со скидкой <b>40%</b> &rarr;
 
