--- a/app/assets/stylesheets/public/blocks/cta_form.sass
+++ b/app/assets/stylesheets/public/blocks/cta_form.sass
@@ -106,34 +106,14 @@
   padding: 0
   width: 100%
   height: 47px
-  background: #e46c37
-  border: 1px solid #a65915
-  color: #fff
   text-align: center
   line-height: 45px
-  border-radius: 3px
-  text-shadow: 0 -1px 1px rgba(0,0,0,0.45)
-  box-sizing: border-box
-  cursor: pointer
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, .25)
-
-  &:focus
-    box-shadow: 0 0 10px rgba($light_200, .7)
-    outline: 0
-
-  &:hover
-    background: #c56236
-
-  &:active
-    background: #d7590d
-    text-shadow: none
-    box-shadow: inset 0 0 7px rgba(0, 0, 0, .15)
+  +orange_button
 
   b
-    margin: 0 5px
     font-size: 23px
-    font-weight: normal
     vertical-align: -2px
+    margin: 0 5px
 
 .cta_form-info
   margin-top: 10px
