--- a/app/assets/stylesheets/public/imports.sass
+++ b/app/assets/stylesheets/public/imports.sass
@@ -61,3 +61,27 @@ $red: #D20A2F
   &
     zoom: 1
 
+=orange_button
+  background: #e46c37
+  border: 1px solid #a65915
+  color: #fff
+  text-shadow: 0 -1px 1px rgba(0,0,0,0.45)
+  border-radius: 3px
+  box-sizing: border-box
+  cursor: pointer
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, .25)
+
+  &:focus
+    box-shadow: 0 0 10px rgba($light_200, .7)
+    outline: 0
+
+  &:hover
+    background: #c56236
+
+  &:active
+    background: #d7590d
+    text-shadow: none
+    box-shadow: inset 0 0 7px rgba(0, 0, 0, .15)
+
+  b
+    font-weight: normal
