--- a/app/views/public/landings/_order.html.slim
+++ b/app/views/public/landings/_order.html.slim
@@ -6,7 +6,7 @@
           = @landing.footer_title
 
       .section-description
-        | Только <b>до 27.11.2014</b> со <b>скидкой 40%</b>!
+        | Только <b>27 ноября 2014</b> со <b>скидкой 40%</b>!
 
   .columns
     .column.is-7
