JS for sticky subheader

--- a/app/views/public/landings/_header.html.slim
+++ b/app/views/public/landings/_header.html.slim
@@ -26,7 +26,7 @@
             span.top_menu-item_dashed
               | FAQ
 
-.sub_header.clearfix
+.sub_header.clearfix data-view='app#sub_header'
   .columns
     .column.is-16
       .sub_header-inner
