--- a/app/assets/stylesheets/public/blocks/sub_header.sass
+++ b/app/assets/stylesheets/public/blocks/sub_header.sass
@@ -11,6 +11,7 @@
   background: linear-gradient(lighten($transparent_10, 3%), $transparent_10)
   box-shadow: 0 2px 3px rgba(0, 0, 0, .25)
   z-index: 110
+  display: none
 
 .sub_header-inner
   display: inline-block
