Optimize for tablets

--- a/app/assets/stylesheets/public/blocks/footer.sass
+++ b/app/assets/stylesheets/public/blocks/footer.sass
@@ -19,6 +19,7 @@
 
 .footer-copy
   float: left
+  width: 70%
 
 .footer-privacy
   float: right
@@ -27,3 +28,10 @@
   span
     padding-bottom: 3px
     border-bottom: 1px dashed #fff
+
+.layout.is-big_tablet
+  .footer
+    height: 46px
+
+  .footer-about_us
+    display: none
