--- a/app/views/public/landings/_footer.html.slim
+++ b/app/views/public/landings/_footer.html.slim
@@ -2,11 +2,12 @@
   .columns
     .column.is-16
       .footer-copy
-        | &copy; SaveMoneyShop.ru — это уникальные товары по низким ценам, акции и щедрые скидки.
+        | &copy; SaveMoneyShop.ru — это уникальные товары по низким ценам, акции&nbsp;и&nbsp;щедрые&nbsp;скидки.
       .footer-privacy
         span data-modal=''
           | Политика конфиденциальности
-      br
-      | Наши реквизиты:
-      br
-      img src=image_path('public/requisites.png') width=871 height=22
+      span.footer-about_us
+        br
+        | Наши реквизиты:
+        br
+        img src=image_path('public/requisites.png') width=871 height=22
