--- a/app/views/public/landings/_header.html.slim
+++ b/app/views/public/landings/_header.html.slim
@@ -58,4 +58,6 @@
           = fa_icon 'chevron-right'
         .sub_header-button
           | Заказать со скидкой <b>40%</b> &rarr;
+        .sub_header-ipad_button
+          | Заказать<br>со скидкой <b>40% &rarr;</b>
 
