--- a/app/assets/stylesheets/public/blocks/cta.sass
+++ b/app/assets/stylesheets/public/blocks/cta.sass
@@ -24,3 +24,14 @@
   font-size: 13px
   line-height: 20px
 
+.layout.is-big_tablet
+  .cta-wrap
+    width: 100%
+    padding: 0 70px
+    box-sizing: border-box
+
+  .cta
+    margin-right: 0
+
+  .cta-inner
+    margin-bottom: 40px
