--- a/app/assets/stylesheets/public/blocks/guarantee.sass
+++ b/app/assets/stylesheets/public/blocks/guarantee.sass
@@ -22,3 +22,12 @@
   margin-bottom: 5px
 
 .guarantee-text
+
+.layout.is-big_tablet
+  .guarantee-image
+    margin-right: 0
+    margin-top: 20px
+
+    img
+      width: 100px
+      height: 100px
