--- a/app/assets/stylesheets/public/blocks/photos_slider.sass
+++ b/app/assets/stylesheets/public/blocks/photos_slider.sass
@@ -96,8 +96,8 @@
   line-height: 69px
   overflow: hidden
 
-.layout.lt-big_screen .photos_slider,
-.photos_slider.for-footer
+.layout.is-small_screen .photos_slider,
+.layout.gt-big_tablet .photos_slider.for-footer
 
   .photos_slider-photo_inner
     width: 248px
@@ -119,9 +119,20 @@
     height: 54px
     line-height: 54px
 
-.layout.lt-big_screen .photos_slider
+.layout.is-small_screen .photos_slider
   margin-top: 60px
 
 .photos_slider.for-footer
   margin-top: 0 !important
   margin-bottom: 25px
+
+.layout.is-big_tablet
+  .photos_slider-wrap
+    width: 100%
+
+  .photos_slider
+    margin-bottom: 40px
+
+  .photos_slider.for-footer
+    margin-bottom: 0
+
