--- a/app/views/public/landings/_main_section.html.slim
+++ b/app/views/public/landings/_main_section.html.slim
@@ -1,6 +1,6 @@
 .section.is-dark_gradient data-section='main'
   .columns
-    .column.is-7.offset.is-by_2
+    .cta-wrap.column.is-7.offset.is-by_2
       .cta
         .cta_inner
           h1.cta-title
@@ -13,7 +13,7 @@
 
           = render 'cta_form'
 
-    .column.is-7
+    .photos_slider-wrap.column.is-7
       = render 'photos_slider'
 
   .columns
