--- a/app/views/public/landings/_order.html.slim
+++ b/app/views/public/landings/_order.html.slim
@@ -9,7 +9,7 @@
         | Только <b>27 ноября 2014</b> со <b>скидкой 40%</b>!
 
   .columns
-    .column.is-7
+    .photos_slider-wrap.column.is-7
       = render 'photos_slider', modifier: 'footer'
-    .column.is-7
+    .cta-wrap.column.is-7
       = render 'cta_form', modifier: 'footer'
