More tablets fixes

--- a/app/assets/stylesheets/public/blocks/footer.sass
+++ b/app/assets/stylesheets/public/blocks/footer.sass
@@ -29,7 +29,7 @@
     padding-bottom: 3px
     border-bottom: 1px dashed #fff
 
-.layout.is-big_tablet
+.layout.lt_small_screent
   .footer
     height: 46px
 
