--- a/app/assets/stylesheets/public/blocks/guarantee.sass
+++ b/app/assets/stylesheets/public/blocks/guarantee.sass
@@ -23,7 +23,7 @@
 
 .guarantee-text
 
-.layout.is-big_tablet
+.layout.lt-small_screen
   .guarantee-image
     margin-right: 0
     margin-top: 20px
