--- a/app/assets/stylesheets/public/blocks/photos_slider.sass
+++ b/app/assets/stylesheets/public/blocks/photos_slider.sass
@@ -126,7 +126,7 @@
   margin-top: 0 !important
   margin-bottom: 25px
 
-.layout.is-big_tablet
+.layout.lt-small_screen
   .photos_slider-wrap
     width: 100%
 
