--- a/app/assets/stylesheets/public/blocks/sub_header.sass
+++ b/app/assets/stylesheets/public/blocks/sub_header.sass
@@ -113,7 +113,7 @@
 .sub_header-ipad_button
   display: none
 
-.layout.is-big_tablet
+.layout.lt-small_screen
   .sub_header-title,
   .sub_header-price,
   .sub_header-timer,
