--- a/app/assets/stylesheets/public/blocks/top_menu.sass
+++ b/app/assets/stylesheets/public/blocks/top_menu.sass
@@ -53,7 +53,7 @@
   padding-bottom: 3px
   cursor: pointer
 
-.layout.is-big_tablet
+.layout.lt-small_screen
   .top_menu-item_inner
     padding: 0 15px
 
