--- a/app/assets/stylesheets/public/blocks/cta.sass
+++ b/app/assets/stylesheets/public/blocks/cta.sass
@@ -24,7 +24,7 @@
   font-size: 13px
   line-height: 20px
 
-.layout.is-big_tablet
+.layout.lt-small_screen
   .cta-wrap
     width: 100%
     padding: 0 70px
