--- a/app/views/public/landings/_main_section.html.slim
+++ b/app/views/public/landings/_main_section.html.slim
@@ -9,7 +9,7 @@
           .cta-description
             = @landing.short_description.html_safe
           .cta-warning
-            | Успейте заказать этот уникальный <b>товар из ограниченной серии</b> по&nbsp;суперцене (<b>скидка действительна до 27.11.2014</b>).
+            | Успейте заказать этот уникальный <b>товар из ограниченной серии</b> по&nbsp;суперцене (<b>скидка действительна до 27 ноября 2014</b>).
 
           = render 'cta_form'
 
